# resize-rs

./: .gitattributes  .gitignore  Cargo.toml  LICENSE  README.md  justfile  rustfmt.toml  test_filters.rs
.github/workflows/: ci.yml
examples/: filter_test.rs
src/: app.rs  main.rs  presets.rs  resizer.rs
